# chatbot-verifiai

./: README.md  requirements.txt  research_analysis_app.py  streamlit_app_openai.py
output/: metrics_summary.json  research_dataset_complete.json  sample_conversation.json
research_generator/: .gitignore  .pre-commit-config.yaml  UnifiedResearchGenerator.py  developer_doc.md  readme.md  requirements.txt  setup.cfg  setup.py  tox.ini
research_generator/config/: config.yaml  default_config.py
research_generator/data_generation/: __init__.py  ai_logger.py  c2pa_manager.py  edge_cases.py  generator.py  metrics.py  models.py  patterns.py
research_generator/examples/: advanced_config.py  advanced_generate_dataset.py  basic_usage.py  example.txt  generate_dataset.py  generate_with_ai_c2pa.py  readme-dataset.md
research_generator/models/: __init__.py  eval_readme.md  evaluation.py  training.py
research_generator/tests/: __init__.py  test_generator.py  test_metrics.py
research_generator/utils/: __init__.py  dataset_diversity.py  helpers.py
src/: streamlit_app_v1.py
src/components/: chat_panel.py  left_panel.py  reference_panel.py
src/utils/: openai_client.py  session_manager.py
