[metadata]
name = research_generator
version = 0.1.0
description = Research conversation dataset generator
long_description = file: README.md
long_description_content_type = text/markdown
author = Your Name
author_email = your.email@example.com
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
install_requires =
    numpy>=1.21.0
    pandas>=1.3.0
    torch>=1.9.0
    transformers>=4.11.0
    scikit-learn>=0.24.2
    tqdm>=4.62.0
    pydantic>=1.8.2

[options.extras_require]
dev =
    pytest>=6.2.5
    pytest-cov>=2.12.1
    black>=21.9b0
    isort>=5.9.3
    mypy>=0.910
    pre-commit>=2.15.0